# sd3-tools

./: Cargo.toml  README.md
cmpdfmt/: Cargo.toml  README.md  cmpdtest-mifc.csv  cmpdtest.csv
cmpdfmt/src/: convert.rs  errors.rs  main.rs  output.rs  proc_inputs.rs
decompact/: Cargo.toml  example_input.csv
decompact/src/: input.rs  main.rs
errlog/: Cargo.toml
errlog/src/: lib.rs
imgqc/: .gitignore  Cargo.toml  Readme.md
imgqc/src/: img.rs  main.rs  qc.rs  vocab.rs
sd3/: Cargo.toml
sd3/src/: cmpd.rs  lib.rs  mifc.rs
sd3norm/: Cargo.toml  README.md
sd3norm/src/: excel_iter.rs  main.rs
test_utils/: Cargo.toml
test_utils/src/: lib.rs
units/: Cargo.toml
units/src/: lib.rs
