[package]
name = "sd3-tools"
version = "0.1.0"
authors = ["mwc10 <43445389+mwc10@users.noreply.github.com>"]
edition = "2018"

[workspace]
members = [
    "sd3",
    "units",
    "test_utils",
]

[dependencies]
sd3 = { path = "./sd3" }
units = { path = "./units" }
structopt = "0.2.14"
failure = "0.1.5"
