[package]
name = "imgqc"
version = "0.8.0"
authors = ["mwc10 <43445389+mwc10@users.noreply.github.com>"]
edition = "2018"

[dependencies]
structopt = "0.3.21"
anyhow = "1.0.38"
csv = "1.0.5"
log = "0.4.6"
flexi_logger = "0.10.5"
calamine = "0.16.2"
chrono = "0.4.7"
reqwest = { version = "0.11.0", default-features = false, features = ["blocking", "json", "default-tls"]}
serde_derive = "1.0.120"
serde = "1.0.120"
errlog = {path = "../errlog"}
sd3 = {path = "../sd3"}
